--- a/cardmodel/src/main/assets/html/about_us.html
+++ b/cardmodel/src/main/assets/html/about_us.html
@@ -12,7 +12,7 @@ Vous pouvez aussi trouver son site internet, portant sur Anima, à cette adresse
 <h5><a id="Compilation_des_sorts_17"></a>Compilation des sorts</h5>
 <p><strong><em>Alexsarge</em>, <em>Schmurtz</em>, <em>Moklo</em> et <em>Kayn</em></strong> du site <a href="http://projet.animajdr.free.fr/news.php">Anima Project</a>.</p>
 <h3><a id="Licence_20"></a>Licence</h3>
-<p>Cette application est open-source, c’est-à-dire que le code est disponible pour tous et modifiable sur demande.</p>
+<p>Cette application est open-source : le code est disponible pour tous et modifiable sur demande.</p>
 <p>L’illustration du fond d’écran appartient à <a href="http://cargocollective.com/luisnct#1293881/Anima-rpg">LuisNCT</a>.<br>
 L’illustration utilisé pour l’icône principale de l’application appartient à <a href="http://wen-m.deviantart.com/gallery/">Wen-M</a>.</p>
 <p>Aucun argent n’est perçu grâce à cette application : celle-ci est gratuite, sans publicité et sans utilisation des données personnelles. Elle est simplement faite par un passionné :).</p>
