--- a/cardmodel/src/main/assets/html/about_us.html
+++ b/cardmodel/src/main/assets/html/about_us.html
@@ -24,7 +24,7 @@ You can also find his website about Anima here : <a href="http://anima-ressource
 <p>Bugs or crashes can occurs in the application. If you find one, don’t hesitate to report it using the option “Report a bug” on the main screen.</p>
 </li>
 <li>
-<p>At last, don’t hesitate so share this application with every Anima players you know and to leave a notation on the Google Play Store if you like the application, it’s always nice to have some :).</p>
+<p>At last, don’t hesitate to share this application with every Anima players you know and to leave a notation on the Google Play Store if you like the application, it’s always nice to have some :).</p>
 </li>
 </ul>
 
