Update du about us

--- a/cardmodel/src/main/assets/html/about_us.html
+++ b/cardmodel/src/main/assets/html/about_us.html
@@ -2,7 +2,7 @@
 <h2><a id="About_us_0"></a>About us</h2>
 <p>This application is a collection of spells from the role playing game <strong><em>Anima : Beyond Fantasy</em></strong>. It uses the magic system of Core Exxet, meaning that every spells has four level of power: base, intermediate, advanced and arcane</p>
 <p>The objective of this application is to provide you a simplified access to the numerous spells of the game. It allows you to see spells by path, to create your own spells list and to search for a donate spell or spell type in a path.</p>
-<p>If you don’t know the game, I suggest you to take a look at it, thought your favorite game seller.</p>
+<p>If you don’t know the game, I suggest you to take a look at it, thought your favorite pen & paper RPG game seller.</p>
 <h3><a id="Licence_23"></a>Licences</h3>
 <p><em>Spell cards and assets design</em> : <strong><em>Souphan Aksonesilp</em></strong> (aka <strong><em>Nouvan</em></strong> from the Edge Entertainement forum), which has inspired this application. <a href="http://www.edgeent.com/sujet/11196-des_memo_cartes_de_sorts_et_de_capacites">You can find his work here</a>.<br>
 You can also find his website about Anima here : <a href="http://anima-ressources.fr/">anima-ressources.fr</a></p>
